--- a/MoinMoin/themes/foobar/static/css/stylus/main.styl
+++ b/MoinMoin/themes/foobar/static/css/stylus/main.styl
@@ -247,7 +247,11 @@ input.blank
     margin: 0
     border 5px solid header_bg_color
     border-radius 6px 6px 0px 0px 
-                
+
+// tabs
+.moin-tab-titles
+    margin:-.5em 
+    list-style: none    
                 
 // links
 a
