--- a/MoinMoin/themes/foobar/static/css/stylus/main.styl
+++ b/MoinMoin/themes/foobar/static/css/stylus/main.styl
@@ -248,6 +248,60 @@ input.blank
     border 5px solid header_bg_color
     border-radius 6px 6px 0px 0px 
 
+// upload content
+#moin-upload-cont
+  min-height: 10px
+
+#file_upload
+  margin-top: 2em
+
+form.upload_file
+  background-color: base_color
+  border border_style
+  cursor: pointer
+  direction: ltr
+  font-weight: bold
+  height: 2.5em
+  line-height: 2.5em
+  overflow: hidden
+  position: relative
+  text-align: center
+  width: 15em
+  box-shadow: 0px 0px 5px shadow_color
+  &:hover
+    box-shadow: 0px 0px 5px font_color
+  input
+      border: 300px solid transparent
+      cursor: pointer
+      opacity: 0
+      position: absolute
+     
+
+form.upload_file button
+  display: none
+
+form.upload_file
+  display: block
+
+.file_upload_template .file_upload_start
+  visibility: hidden
+  border-width: 0px
+  padding: 0px
+
+.file_upload_template .file_upload_start button
+  width: 0px
+
+.upload-form
+  display: none
+
+.moin-drag
+  font-size: 0.7em
+  color: shadow_color
+
+a.moin-conflict:before
+  content: url(../img/moin-conflict.png)
+  margin: 0 0.2em
+
 // tabs
 .moin-tab-titles
     margin:-.5em 
