--- a/MoinMoin/themes/foobar/static/css/common.css
+++ b/MoinMoin/themes/foobar/static/css/common.css
@@ -179,6 +179,18 @@ input.blank{border-color:#ccc;border-width:2px}
 .moin-form dd{margin-bottom:1em;}
 .moin-form dd input{width:20em}
 .moin-form dt label.required:after{content:'*';color:#000}
+.moin-select-all span{cursor:pointer}
+.moin-select-actions span{cursor:pointer}
+.moin-select-actions ul{display:none;}
+.moin-select-actions ul li{cursor:pointer}
+.moin-contenttypes-wrapper div{cursor:pointer}
+.moin-contenttypes-wrapper form{display:none;}
+.moin-contenttypes-wrapper form li label{cursor:pointer;display:inline}
+.moin-contenttypes-wrapper form li span{display:block}
+#f_contenttype_filter_submit{padding-left:3em;padding-right:3em;margin-left:3em;cursor:pointer;box-shadow:1px 1px 2px #000;}
+#f_contenttype_filter_submit:hover{box-shadow:1px 1px 2px #9d9d9b}
+.show-action:after,.ct-hide:after{content:url("../img/moin-moveup.png");margin:0 .2em;float:right;vertical-align:middle}
+.action-visible .show-action:after,.ct-shown:after{content:url("../img/moin-movedown.png");margin:0 .2em;float:right;vertical-align:middle}
 #popup{background:transparent url("../img/moin-transparent-bg.png") repeat;padding:5px;width:40%;position:absolute;top:10%;left:30%;display:none;z-index:10}
 .popup-header{background-color:#2c2c2a;color:#fff;padding:10px;margin:0}
 .popup-closer{padding:0 1px;margin:-.2em;width:19px;border-radius:2em;float:right;cursor:pointer;}
