--- a/MoinMoin/themes/foobar/static/css/common.css
+++ b/MoinMoin/themes/foobar/static/css/common.css
@@ -179,6 +179,26 @@ input.blank{border-color:#ccc;border-width:2px}
 .moin-form dd{margin-bottom:1em;}
 .moin-form dd input{width:20em}
 .moin-form dt label.required:after{content:'*';color:#000}
+.moin-clr{clear:both}
+.moin-index-message{width:50%;margin:1em auto;text-align:center;display:none;}
+.moin-index-message span{padding:4px;background-color:#007cef;color:#fff;border:1px solid #ccc;border-radius:5px}
+.moin-download-link{display:none}
+.moin-index-path{margin-left:.5em;}
+.moin-index-path:before{content:url("../img/moin-parent.png");margin:0 .3em}
+#moin-initials{width:90%;margin:5px auto;text-align:center;}
+#moin-initials a{display:inline-block;margin:0;padding:4px 5px;}
+#moin-initials a:hover,#moin-initials a.selected{background:#4fa8fa;border-radius:5px;color:#fff;text-decoration:none}
+.moin-item-index{width:100%;margin-left:.5em;}
+.moin-item-index div{float:left;width:15em;}
+.moin-item-index div .moin-select-item{visibility:hidden;display:inline-block;vertical-align:middle;width:17px;cursor:default;background:transparent url("../img/moin-checkbox-off.png") no-repeat}
+.moin-item-index div.selected-item .moin-select-item,.moin-item-index div:hover .moin-select-item{visibility:visible}
+.moin-item-index div.selected-item .moin-select-item{background-image:url("../img/moin-checkbox-on.png")}
+#lightbox{background:#f0f0f0;opacity:.7;filter:alpha;position:absolute;left:0;top:0;width:100%;height:100%;z-index:9;margin:0;display:none}
+.filter-toggle{margin:0 .2em;font-size:90%}
+.moin-more-index{background:transparent url("../img/moin-expand.png") no-repeat;display:inline-block;width:20px;}
+.moin-more-index:hover{text-decoration:none}
+.moin-path-separator{font-size:120%;color:#4fa8fa}
+.moin-index-separator{clear:both;border-top:1px dashed #ccc;width:80%;display:none}
 .moin-select-all span{cursor:pointer}
 .moin-select-actions span{cursor:pointer}
 .moin-select-actions ul{display:none;}
