--- a/MoinMoin/themes/foobar/static/css/stylus/main.styl
+++ b/MoinMoin/themes/foobar/static/css/stylus/main.styl
@@ -205,6 +205,99 @@ input.blank
                 content: '*'
                 color: font_color
 
+// index page
+.moin-clr
+    clear both
+    
+.moin-index-message
+    width 50%
+    margin 1em auto
+    text-align center
+    display none
+    span
+        padding 4px
+        background-color hover_color
+        color heading_color
+        border border_style
+        border-radius 5px
+
+.moin-download-link
+  display none
+
+.moin-index-path
+    margin-left 0.5em
+    &:before
+        content url("../img/moin-parent.png")
+        margin 0 0.3em
+
+#moin-initials
+    width 90%
+    margin 5px auto
+    text-align center
+    a
+        display inline-block
+        margin 0
+        padding 4px 5px
+        &:hover,
+        &.selected
+            background link_color
+            border-radius 5px
+            color heading_color
+            text-decoration none
+
+.moin-item-index
+    width: 100%
+    margin-left: 0.5em
+    div
+        float: left
+        width: 15em
+        .moin-select-item
+            visibility hidden
+            display inline-block
+            vertical-align middle
+            width 17px
+            cursor default
+            background transparent url("../img/moin-checkbox-off.png") no-repeat
+        &.selected-item .moin-select-item,
+        &:hover .moin-select-item
+            visibility visible
+        &.selected-item .moin-select-item
+            background-image url("../img/moin-checkbox-on.png")
+
+#lightbox
+    background page_color
+    opacity 0.7
+    filter alpha
+    position absolute
+    left 0
+    top 0
+    width 100%
+    height 100%
+    z-index 9
+    margin 0
+    display none
+  
+.filter-toggle
+    margin 0 0.2em
+    font-size 90%
+
+.moin-more-index
+    background transparent url("../img/moin-expand.png") no-repeat
+    display inline-block
+    width 20px
+    &:hover
+        text-decoration none
+
+.moin-path-separator
+    font-size 120%
+    color link_color
+
+.moin-index-separator
+    clear both
+    border-top 1px dashed border_color
+    width 80%
+    display none
+
 // index local panel
 .moin-select-all
     span
