Foobar theme mime-type icons added

--- a/MoinMoin/themes/foobar/static/css/stylus/main.styl
+++ b/MoinMoin/themes/foobar/static/css/stylus/main.styl
@@ -21,6 +21,9 @@
 // color have been used from the color palette 
 @import "color_palette"
 
+// mime type icons
+@import "mime_type_icons"
+
 font_family = sans-serif
 main_font_size = 1em
 small_font_size = main_font_size * 0.8
