--- a/MoinMoin/themes/foobar/static/css/common.css
+++ b/MoinMoin/themes/foobar/static/css/common.css
@@ -147,6 +147,22 @@ input, select { vertical-align: middle; }
 .center { text-align: center; }
 .right { text-align: right; }
 .justify { text-align: justify; }
+a.moin-www:before,a.moin-http:before,a.moin-https:before{content:url("../img/moin-www.png");margin:0 .2em;vertical-align:middle}
+a.moin-file:before,a.moin-ftp:before{content:url("../img/moin-ftp.png");margin:0 .2em;vertical-align:middle}
+a.moin-nntp:before,a.moin-news:before{content:url("../img/moin-news.png");margin:0 .2em;vertical-align:middle}
+a.moin-telnet:before,a.moin-ssh:before,a.moin-irc:before,a.moin-ircs:before{content:url("../img/moin-telnet.png");margin:0 .2em;vertical-align:middle}
+a.moin-mailto:before{content:url("../img/moin-email.png");margin:0 .2em;vertical-align:middle}
+a.moin-attachment:before{content:url("../img/moin-attach.png");margin:0 .2em;vertical-align:middle}
+a.moin-interwiki:before{content:url("../img/moin-inter.png");margin:0 .2em;vertical-align:middle}
+a.moin-action:before{content:url("../img/moin-action.png");margin:0 .2em;vertical-align:middle}
+a.moin-mime-text:before{content:url("../img/moin-text.png");margin:0 .2em;vertical-align:middle}
+a.moin-mime-image:before{content:url("../img/moin-image.png");margin:0 .2em;vertical-align:middle}
+a.moin-mime-audio:before{content:url("../img/moin-audio.png");margin:0 .2em;vertical-align:middle}
+a.moin-mime-video:before{content:url("../img/moin-video.png");margin:0 .2em;vertical-align:middle}
+a.moin-mime-application:before{content:url("../img/moin-application.png");margin:0 .2em;vertical-align:middle}
+a.moin-mime-pdf:before{content:url("../img/moin-pdf.png");margin:0 .2em;vertical-align:middle}
+a.moin-mime-package:before{content:url("../img/moin-package.png");margin:0 .2em;vertical-align:middle}
+a.moin-mime-drawing:before{content:url("../img/moin-drawing.png");margin:0 .2em;vertical-align:middle}
 body{color:#000;background-color:#d6d5d0;font-family:sans-serif;background-image:url("../img/base.png")}
 #moin-global-tray{float:left;width:16.666666666666668%;padding:.5%;overflow:hidden}
 #moin-main-container{float:left;width:81.13333333333333%;padding:.5%}
