Foobar theme footer color changed

--- a/MoinMoin/themes/foobar/static/css/stylus/main.styl
+++ b/MoinMoin/themes/foobar/static/css/stylus/main.styl
@@ -103,6 +103,7 @@ body
     color footer_color
     padding 0.5% 0.5%
     overflow auto
+    
 
 // now the stuff inside the main elements
 
@@ -161,6 +162,8 @@ body
     list-style-type none 
     li
         padding 0.1em
+    a
+        color footer_color
 
 #moin-footer-logos
     float opposite-position(dir)
