--- a/MoinMoin/themes/foobar/static/css/common.css
+++ b/MoinMoin/themes/foobar/static/css/common.css
@@ -172,7 +172,7 @@ body{color:#000;background-color:#d6d5d0;font-family:sans-serif;background-image
 #moin-content-no-panel{float:left;width:98.56746096959736%;padding:.6162695152013148%;border-right:1px solid #ccc}
 #moin-content-with-panel{float:left;width:76.79260476581759%;padding:.6162695152013148%;border-right:1px solid #ccc}
 #moin-local-panel{float:left;width:20.54231717337716%;padding:.6162695152013148%;margin-left:-1px;border-left:1px solid #ccc}
-#moin-footer{clear:both;font-size:.8em;color:#000;padding:.5% .5%;overflow:auto}
+#moin-footer{clear:both;font-size:.8em;color:#616161;padding:.5% .5%;overflow:auto}
 #moin-breadcrumbs-location{float:left;padding:.3em .5em .2em .5em;font-weight:bold}
 #moin-search{float:right;padding:.3em .5em .2em .5em}
 #moin-logo{width:100%;padding:0 0 1em 0;}
@@ -183,6 +183,7 @@ body{color:#000;background-color:#d6d5d0;font-family:sans-serif;background-image
 #moin-global-panel ul li ul li,#moin-local-panel ul li ul li{font-size:.8em;color:#fff;font-weight:normal;padding:.1em .1em .1em .1em;border:none;box-shadow:none;margin:0}
 #moin-footer ul,#moin-credits{float:left;list-style-type:none;}
 #moin-footer ul li,#moin-credits li{padding:.1em}
+#moin-footer ul a,#moin-credits a{color:#616161}
 #moin-footer-logos{float:right;}
 #moin-footer-logos ul li{display:inline}
 label{display:block;font-weight:bold}
@@ -286,7 +287,7 @@ h3{font-size:1.2em;margin:.8333333333333334em 0;border-bottom:2px solid #ccc;pad
 h4{font-size:1em;margin:1em 0;border-bottom:2px solid #ccc;padding-bottom:2px}
 h5{font-size:.8333333333333334em;margin:1.2em 0;border-bottom:1px solid #ccc;padding-bottom:1px}
 h6{font-size:.6944444444444445em;margin:1.4399999999999997em 0;border-bottom:1px solid #ccc;padding-bottom:1px}
-a.permalink{display:none;cursor:pointer;margin-left:.1em;color:#000;}
+a.permalink{display:none;cursor:pointer;margin-left:.1em;color:#616161;}
 a.permalink:hover{color:#000}
 h1:hover .permalink,h2:hover .permalink,h3:hover .permalink,h4:hover .permalink,h5:hover .permalink,h6:hover .permalink{display:inline;text-decoration:none}
 hr{background-color:#000;border:0;margin:.9em 0;height:1px;}
