--- a/MoinMoin/themes/foobar/static/css/stylus/main.styl
+++ b/MoinMoin/themes/foobar/static/css/stylus/main.styl
@@ -113,9 +113,18 @@ body
     padding 0.3em 0.5em 0.2em 0.5em
     font-weight bold
 
+#moin-pagelocation
+    vertical-align middle
+
+.moin-pagepath
+    vertical-align middle
+
 #moin-search
     float opposite-position(dir)
     padding 0.3em 0.5em 0.2em 0.5em
+
+#moin-search-submit
+    vertical-align middle
 
 // panels, footer
 #moin-logo
