Foobar theme visited links color changed

--- a/MoinMoin/themes/foobar/static/css/common.css
+++ b/MoinMoin/themes/foobar/static/css/common.css
@@ -254,7 +254,7 @@ a.moin-conflict:before{content:url("../img/moin-conflict.png");margin:0 .2em}
 .moin-tab-titles{margin:-.5em;list-style:none}
 a{text-decoration:none;}
 a:link{color:#4fa8fa}
-a:visited{color:#5e84a7}
+a:visited{color:#5693c1}
 a:hover{color:#007cef;text-decoration:underline}
 a:active{color:#51d443;text-decoration:underline}
 a.moin-nonexistent:link{color:#f1f1f1}
