--- a/MoinMoin/themes/foobar/static/css/stylus/color_palette.styl
+++ b/MoinMoin/themes/foobar/static/css/stylus/color_palette.styl
@@ -14,6 +14,6 @@ table_bg_color = #d0d0d0
 link_color = #4fa8fa
 hover_color = #007cef
 active_color = #51d443
-visited_color = #5e84a7
+visited_color = #5693c1
 nonexistent_link_color = #f1f1f1
 nonexistent_hover_color = #ff2727
