--- a/MoinMoin/themes/foobar/static/css/stylus/main.styl
+++ b/MoinMoin/themes/foobar/static/css/stylus/main.styl
@@ -587,6 +587,7 @@ table
     th
         border border_style
         background-color header_bg_color
+        color heading_color
     td
         border border_style
 
@@ -596,13 +597,11 @@ table.zebra
     border-spacing 1px
     thead
         background-color header_bg_color
+        color heading_color
     tfoot
         background-color base_color
     tbody tr,
     > tr
-        background-color table_bg_color
-    tbody tr:nth-child(odd),
-    > tr:nth-child(odd)
         background-color table_bg_color
     th,
     td
