--- a/MoinMoin/themes/foobar/static/css/common.css
+++ b/MoinMoin/themes/foobar/static/css/common.css
@@ -252,6 +252,38 @@ form.upload_file{display:block}
 .moin-drag{font-size:.7em;color:#9d9d9b}
 a.moin-conflict:before{content:url("../img/moin-conflict.png");margin:0 .2em}
 .moin-tab-titles{margin:-.5em;list-style:none}
+#moin-global-history,#moin-page-history{font-size:75%}
+#moin-page-history table{border:1px solid #ccc;border-radius:5px;}
+#moin-page-history table thead{border-top-left-radius:5px;border-top-right-radius:5px;}
+#moin-page-history table thead tr th{text-align:center;}
+#moin-page-history table thead tr th input[type="Submit"]{width:26px;box-shadow:1px 1px 2px #9d9d9b;cursor:pointer;}
+#moin-page-history table thead tr th input[type="Submit"]:hover{box-shadow:1px 1px 2px #000}
+.moin-hist-rev{margin:0;}
+.moin-hist-rev input{float:left}
+.moin-wordbreak{word-break:break-all;word-wrap:break-word}
+.moin-history-time{width:10%}
+.moin-history-contenttype{width:18%}
+.moin-history-editorinfo{width:17%}
+.moin-history-comment{width:30%}
+.moin-action{width:2%;}
+.moin-action a:hover{text-decoration:none}
+.moin-history-container{border:1px solid #ccc;margin:2em 2em;border-top-left-radius:5px;border-top-right-radius:5px}
+.moin-history-container-header{background:#2c2c2a;margin:0;padding:4px;color:#fff;border-bottom:1px solid #ccc;border-top-left-radius:5px;border-top-right-radius:5px;}
+.moin-history-container-header h2{display:inline;border:none}
+.moin-history-container-header a.bookmark-link{margin-left:10px;color:#fff}
+.moin-history-container-body{margin:0;padding:0;font-size:14px;}
+.moin-history-container-body table{margin:0;width:100%}
+.moin-history-save:before{content:url("../img/moin-edit.png")}
+.moin-history-trash:before{content:url("../img/moin-deleted.png")}
+.moin-history-rename:before{content:url("../img/moin-renamed.png")}
+.moin-history-copy:before{content:url("../img/moin-new.png")}
+.moin-integer{width:2%}
+.moin-history-links{width:5%;}
+.moin-history-links a{display:block}
+.moin-history-editortext,.moin-history-links span,.moin-history-comment span{color:#d6d5d0;display:block;margin-bottom:5px}
+.moin-offset-links{float:right;margin-right:20px;}
+.moin-offset-links a{margin-right:10px;padding:3px 7px;font-size:20px;background:#f0f0f0;border:1px groove #ccc;border-radius:5px;}
+.moin-offset-links a:hover{box-shadow:0 0 12px #9d9d9b}
 a{text-decoration:none;}
 a:link{color:#4fa8fa}
 a:visited{color:#5693c1}
