--- a/MoinMoin/themes/foobar/static/css/stylus/main.styl
+++ b/MoinMoin/themes/foobar/static/css/stylus/main.styl
@@ -459,7 +459,123 @@ a.moin-conflict:before
 .moin-tab-titles
     margin:-.5em 
     list-style: none    
-                
+
+// history page
+#moin-global-history,
+#moin-page-history
+    font-size 75%
+
+#moin-page-history
+    table
+        border border_style
+        border-radius 5px
+        thead 
+            border-top-left-radius 5px
+            border-top-right-radius 5px
+            tr th
+                    text-align center
+                    input[type="Submit"]
+                        width 26px
+                        box-shadow 1px 1px 2px shadow_color
+                        cursor pointer
+                        &:hover
+                            box-shadow 1px 1px 2px font_color
+
+.moin-hist-rev
+  margin 0
+  input
+      float left
+
+.moin-wordbreak
+  word-break break-all
+  word-wrap break-word
+
+.moin-history-time
+  width 10%
+
+.moin-history-contenttype
+  width 18%
+
+.moin-history-editorinfo
+  width 17%
+
+.moin-history-comment
+  width 30%
+
+.moin-action
+  width 2%
+  a:hover
+      text-decoration none
+
+.moin-history-container
+  border border_style
+  margin 2em 2em
+  border-top-left-radius 5px
+  border-top-right-radius 5px
+
+.moin-history-container-header
+  background header_bg_color
+  margin 0px
+  padding 4px
+  color heading_color
+  border-bottom border_style
+  border-top-left-radius 5px
+  border-top-right-radius 5px
+  h2
+      display inline
+      border none
+  a.bookmark-link
+      margin-left 10px
+      color heading_color
+
+.moin-history-container-body
+  margin 0
+  padding 0
+  font-size 14px
+  table
+      margin 0
+      width 100%
+
+.moin-history-save:before
+  content url('../img/moin-edit.png')
+
+.moin-history-trash:before
+  content url('../img/moin-deleted.png')
+
+.moin-history-rename:before
+  content url('../img/moin-renamed.png')
+
+.moin-history-copy:before
+  content url('../img/moin-new.png')
+
+.moin-integer
+  width 2%
+
+.moin-history-links
+  width 5%
+  a
+      display block
+
+.moin-history-editortext,
+.moin-history-links span,
+.moin-history-comment span
+  color base_color
+  display block
+  margin-bottom 5px
+
+.moin-offset-links
+  float right
+  margin-right 20px
+  a
+      margin-right 10px
+      padding 3px 7px
+      font-size 20px
+      background page_color
+      border 1px groove border_color
+      border-radius 5px
+      &:hover
+          box-shadow 0px 0px 12px shadow_color
+    
 // links
 a
     text-decoration none
