Foobar theme moin-flash and error styling

--- a/MoinMoin/themes/foobar/static/css/stylus/color_palette.styl
+++ b/MoinMoin/themes/foobar/static/css/stylus/color_palette.styl
@@ -17,3 +17,4 @@ active_color = #51d443
 visited_color = #5693c1
 nonexistent_link_color = #f1f1f1
 nonexistent_hover_color = #ff2727
+error_color = #ff2727
