--- a/MoinMoin/themes/foobar/static/css/stylus/main.styl
+++ b/MoinMoin/themes/foobar/static/css/stylus/main.styl
@@ -599,6 +599,39 @@ a
     &.moin-nonexistent:active
         color nonexistent_hover_color
 
+// moin-flash & error
+.moin-flash
+    margin 0
+    padding 6px 6px 6px 38px
+    background-color heading_color
+    border-bottom border style
+    background-repeat no-repeat
+    background-position 16px center
+
+.moin-flash-hint
+    background-image url(../img/smileys/idea.png)
+    color hover_color
+
+.moin-flash-info
+    background-image url(../img/smileys/icon-info.png)
+    color hover_color
+
+.moin-flash-warning
+    background-image url(../img/smileys/alert.png)
+    color error_color
+
+.moin-flash-error
+    background-image url(../img/smileys/icon-error.png)
+    color error_color
+  
+.moin-error
+    color error_color
+    background base_color
+    padding 4px
+    margin 1em
+    text-align centre
+    list-style-type none
+    border-radius 5px
 
 // lists
 ul, dl
