--- a/MoinMoin/themes/foobar/static/css/common.css
+++ b/MoinMoin/themes/foobar/static/css/common.css
@@ -293,6 +293,12 @@ a.moin-nonexistent:link{color:#f1f1f1}
 a.moin-nonexistent:visited{color:#f1f1f1}
 a.moin-nonexistent:hover{color:#ff2727}
 a.moin-nonexistent:active{color:#ff2727}
+.moin-flash{margin:0;padding:6px 6px 6px 38px;background-color:#fff;border-bottom:border style;background-repeat:no-repeat;background-position:16px center}
+.moin-flash-hint{background-image:url("../img/smileys/idea.png");color:#007cef}
+.moin-flash-info{background-image:url("../img/smileys/icon-info.png");color:#007cef}
+.moin-flash-warning{background-image:url("../img/smileys/alert.png");color:#ff2727}
+.moin-flash-error{background-image:url("../img/smileys/icon-error.png");color:#ff2727}
+.moin-error{color:#ff2727;background:#d6d5d0;padding:4px;margin:1em;text-align:centre;list-style-type:none;border-radius:5px}
 ul,dl{margin-left:1.5em}
 ol{margin-left:3em;}
 ol ol{margin-left:1.5em}
