--- a/MoinMoin/themes/foobar/static/css/stylus/main.styl
+++ b/MoinMoin/themes/foobar/static/css/stylus/main.styl
@@ -223,6 +223,22 @@ input.blank
                 content: '*'
                 color: font_color
 
+// create table
+#moin-create-table
+    width 95%
+    margin-left auto
+    margin-right auto
+    tbody tr 
+            th
+                text-align center
+                background table_bg_color
+                margin 2px
+            td
+                text-align center
+                background page_color
+                a
+                    color font_color
+
 // index page
 .moin-clr
     clear both
