--- a/MoinMoin/themes/foobar/templates/modify_show_type_selection.html
+++ b/MoinMoin/themes/foobar/templates/modify_show_type_selection.html
@@ -4,15 +4,15 @@
 <p>
 {{ _("This item does not exist (yet), but you can try creating it now. Please select the type of the item you want to create.") }}
 </p>
-<table class="zebra">
+<table id="moin-create-table" class="zebra">
     {% for gname, contenttypes in contenttype_groups %}
     <tr>
         <th>{{ gname }}</th>
     </tr>
     <tr>
-        <td>
+        <td> |&nbsp
         {% for ctname, ctlabel in contenttypes %}
-            <a href="{{ url_for('frontend.modify_item', item_name=item_name, contenttype=ctname) }}">{{ ctlabel }}</a> -
+            <a href="{{ url_for('frontend.modify_item', item_name=item_name, contenttype=ctname) }}">{{ ctlabel }}</a> &nbsp|&nbsp 
         {% endfor %}
         </td>
     </tr>
