--- a/MoinMoin/themes/foobar/static/css/stylus/main.styl
+++ b/MoinMoin/themes/foobar/static/css/stylus/main.styl
@@ -24,6 +24,9 @@
 // mime type icons
 @import "mime_type_icons"
 
+// moin diff styling
+@import "moin_diff"
+
 font_family = sans-serif
 main_font_size = 1em
 small_font_size = main_font_size * 0.8
