--- a/MoinMoin/themes/foobar/static/css/stylus/main.styl
+++ b/MoinMoin/themes/foobar/static/css/stylus/main.styl
@@ -27,7 +27,7 @@
 // moin diff styling
 @import "moin_diff"
 
-font_family = sans-serif
+font_family = verdana, sans-serif
 main_font_size = 1em
 small_font_size = main_font_size * 0.8
 heading_scale = 1.2  // font size factor for h1 .. h6
