--- a/MoinMoin/themes/foobar/static/css/stylus/main.styl
+++ b/MoinMoin/themes/foobar/static/css/stylus/main.styl
@@ -339,9 +339,11 @@ input.blank
 .moin-select-all
     span
         cursor pointer
+        font-size 84%
 .moin-select-actions
     span
         cursor pointer
+        font-size 84%
     ul
         display none
         li
@@ -349,6 +351,7 @@ input.blank
 .moin-contenttypes-wrapper
     div
         cursor pointer
+        font-size 84%
     form 
         display none
         li
@@ -480,7 +483,11 @@ a.moin-conflict:before
 // tabs
 .moin-tab-titles
     margin:-.5em 
-    list-style: none    
+    list-style: none
+
+#moin-usersetting-title
+    li a
+        font-size 84%    
 
 // history page
 #moin-global-history,
