--- a/MoinMoin/themes/foobar/static/css/stylus/main.styl
+++ b/MoinMoin/themes/foobar/static/css/stylus/main.styl
@@ -487,7 +487,8 @@ a.moin-conflict:before
 
 #moin-usersetting-title
     li a
-        font-size 84%    
+        font-size 84%
+        color heading_color
 
 // history page
 #moin-global-history,
