Foobar theme main.styl indentation and consistency

--- a/MoinMoin/themes/foobar/static/css/stylus/main.styl
+++ b/MoinMoin/themes/foobar/static/css/stylus/main.styl
@@ -187,8 +187,8 @@ div p
         
 // form
 label
-    display: block
-    font-weight: bold
+    display block
+    font-weight bold
 
 button
     background base_color
@@ -202,29 +202,29 @@ button
     
 input,
 select
-    padding: 3px
-    background: page_color
-    border: border_style
+    padding 3px
+    background page_color
+    border border_style
     border-radius 2px
 input[type="text"]
-    width: 300px
+    width 300px
 input[type="submit"],
 input[type="button"] 
     background base_color
 input.blank
-    border-color: border_color
-    border-width: 2px
+    border-color border_color
+    border-width 2px
 
 .moin-form 
     dd
-        margin-bottom: 1em
+        margin-bottom 1em
         input
-            width: 20em
+            width 20em
     dt
         label
             &.required:after
-                content: '*'
-                color: font_color
+                content '*'
+                color font_color
 
 // create table
 #moin-create-table
@@ -286,8 +286,8 @@ input.blank
     width: 100%
     margin-left: 0.5em
     div
-        float: left
-        width: 15em
+        float left
+        width 15em
         .moin-select-item
             visibility hidden
             display inline-block
@@ -386,104 +386,104 @@ input.blank
 // popups
 #popup
     background: transparent url("../img/moin-transparent-bg.png") repeat
-    padding: 5px
-    width: 40%
-    position: absolute
-    top: 10%
-    left: 30%
-    display: none
-    z-index: 10
+    padding 5px
+    width 40%
+    position absolute
+    top 10%
+    left 30%
+    display none
+    z-index 10
 
 .popup-header
-    background-color: header_bg_color
-    color: heading_color
-    padding: 10px
-    margin: 0
+    background-color header_bg_color
+    color heading_color
+    padding 10px
+    margin 0
 
 .popup-closer
-    padding: 0px 1px
-    margin: -0.2em
-    width: 19px
-    border-radius: 2em
-    float: right
-    cursor: pointer
+    padding 0px 1px
+    margin -0.2em
+    width 19px
+    border-radius 2em
+    float right
+    cursor pointer
     &:hover
         background page_color
 
 .popup-body
-    clear: both
-    background-color: page_color
-    color: font_color
-    padding: 10px
-    margin: 0
+    clear both
+    background-color page_color
+    color font_color
+    padding 10px
+    margin 0
     label
-        margin: 5px
+        margin 5px
     input
-        margin: 8px 5px
+        margin 8px 5px
 
 .popup-container
-    margin: 0
+    margin 0
     border 5px solid header_bg_color
     border-radius 6px 6px 0px 0px 
 
 // upload content
 #moin-upload-cont
-  min-height: 10px
+    min-height 10px
 
 #file_upload
-  margin-top: 2em
+    margin-top 2em
 
 form.upload_file
-  background-color: base_color
-  border border_style
-  cursor: pointer
-  direction: ltr
-  font-weight: bold
-  height: 2.5em
-  line-height: 2.5em
-  overflow: hidden
-  position: relative
-  text-align: center
-  width: 15em
-  box-shadow: 0px 0px 5px shadow_color
-  &:hover
-    box-shadow: 0px 0px 5px font_color
-  input
-      border: 300px solid transparent
-      cursor: pointer
-      opacity: 0
-      position: absolute
+    background-color base_color
+    border border_style
+    cursor pointer
+    direction ltr
+    font-weight bold
+    height 2.5em
+    line-height 2.5em
+    overflow hidden
+    position relative
+    text-align center
+    width 15em
+    box-shadow 0px 0px 5px shadow_color
+    &:hover
+        box-shadow 0px 0px 5px font_color
+    input
+        border 300px solid transparent
+        cursor pointer
+        opacity 0
+        position absolute
      
 
 form.upload_file button
-  display: none
+    display none
 
 form.upload_file
-  display: block
+    display block
 
 .file_upload_template .file_upload_start
-  visibility: hidden
-  border-width: 0px
-  padding: 0px
+    visibility hidden
+    border-width 0px
+    padding 0px
 
 .file_upload_template .file_upload_start button
-  width: 0px
+    width 0px
 
 .upload-form
-  display: none
+    display none
 
 .moin-drag
-  font-size: 0.7em
-  color: shadow_color
+    font-size 0.7em
+    color shadow_color
 
 a.moin-conflict:before
-  content: url(../img/moin-conflict.png)
-  margin: 0 0.2em
+    content url(../img/moin-conflict.png)
+    margin 0 0.2em
 
 // tabs
 .moin-tab-titles
-    margin:-.5em 
-    list-style: none
+    margin -.5em 
+    list-style none
 
 #moin-usersetting-title
     li a
@@ -512,99 +512,99 @@ a.moin-conflict:before
                             box-shadow 1px 1px 2px font_color
 
 .moin-hist-rev
-  margin 0
-  input
-      float left
+    margin 0
+    input
+        float left
 
 .moin-wordbreak
-  word-break break-all
-  word-wrap break-word
+    word-break break-all
+    word-wrap break-word
 
 .moin-history-time
-  width 10%
+    width 10%
 
 .moin-history-contenttype
-  width 18%
+    width 18%
 
 .moin-history-editorinfo
-  width 17%
+    width 17%
 
 .moin-history-comment
-  width 30%
+    width 30%
 
 .moin-action
-  width 2%
-  a:hover
-      text-decoration none
+    width 2%
+    a:hover
+        text-decoration none
 
 .moin-history-container
-  border border_style
-  margin 2em 2em
-  border-top-left-radius 5px
-  border-top-right-radius 5px
+    border border_style
+    margin 2em 2em
+    border-top-left-radius 5px
+    border-top-right-radius 5px
 
 .moin-history-container-header
-  background header_bg_color
-  margin 0px
-  padding 4px
-  color heading_color
-  border-bottom border_style
-  border-top-left-radius 5px
-  border-top-right-radius 5px
-  h2
-      display inline
-      border none
-  a.bookmark-link
-      margin-left 10px
-      color heading_color
+    background header_bg_color
+    margin 0px
+    padding 4px
+    color heading_color
+    border-bottom border_style
+    border-top-left-radius 5px
+    border-top-right-radius 5px
+    h2
+        display inline
+        border none
+    a.bookmark-link
+        margin-left 10px
+        color heading_color
 
 .moin-history-container-body
-  margin 0
-  padding 0
-  font-size 14px
-  table
-      margin 0
-      width 100%
+    margin 0
+    padding 0
+    font-size 14px
+    table
+        margin 0
+        width 100%
 
 .moin-history-save:before
-  content url('../img/moin-edit.png')
+    content url('../img/moin-edit.png')
 
 .moin-history-trash:before
-  content url('../img/moin-deleted.png')
+    content url('../img/moin-deleted.png')
 
 .moin-history-rename:before
-  content url('../img/moin-renamed.png')
+    content url('../img/moin-renamed.png')
 
 .moin-history-copy:before
-  content url('../img/moin-new.png')
+    content url('../img/moin-new.png')
 
 .moin-integer
-  width 2%
+    width 2%
 
 .moin-history-links
-  width 5%
-  a
-      display block
+    width 5%
+    a
+        display block
 
 .moin-history-editortext,
 .moin-history-links span,
 .moin-history-comment span
-  color base_color
-  display block
-  margin-bottom 5px
+    color base_color
+    display block
+    margin-bottom 5px
 
 .moin-offset-links
-  float right
-  margin-right 20px
-  a
-      margin-right 10px
-      padding 3px 7px
-      font-size 20px
-      background page_color
-      border 1px groove border_color
-      border-radius 5px
-      &:hover
-          box-shadow 0px 0px 12px shadow_color
+    float right
+    margin-right 20px
+    a
+        margin-right 10px
+        padding 3px 7px
+        font-size 20px
+        background page_color
+        border 1px groove border_color
+        border-radius 5px
+        &:hover
+            box-shadow 0px 0px 12px shadow_color
     
 // links
 a
