typo correction in usersettings.html

--- a/MoinMoin/themes/foobar/templates/usersettings.html
+++ b/MoinMoin/themes/foobar/templates/usersettings.html
@@ -34,7 +34,7 @@
 
     
     <div id="moin-ui" class="moin-tab-body moin-form">
-        <h2>{{ _("Wiki Appearnce Settings") }}</h2>
+        <h2>{{ _("Wiki Appearance Settings") }}</h2>
         {{ user_forms.ui(form_objs.ui) }}
     </div>
 
