Foobar theme metadate contrast issue resolved

--- a/MoinMoin/themes/foobar/static/css/stylus/color_palette.styl
+++ b/MoinMoin/themes/foobar/static/css/stylus/color_palette.styl
@@ -15,6 +15,6 @@ link_color = #4fa8fa
 hover_color = #007cef
 active_color = #51d443
 visited_color = #5693c1
-nonexistent_link_color = #f1f1f1
+nonexistent_link_color = #bababa
 nonexistent_hover_color = #ff2727
 error_color = #ff2727
