--- a/MoinMoin/themes/foobar/static/css/stylus/main.styl
+++ b/MoinMoin/themes/foobar/static/css/stylus/main.styl
@@ -891,7 +891,7 @@ pre
     word-wrap break-word
     border border_style
     background-color base_color
-    margin .33em 0
+    margin .5em
     padding 5px
     clear both
     &.comment
@@ -905,11 +905,12 @@ pre
 
 textarea
     font-family monospace
-    width 100%
+    width 98%
     border border_style
+    margin-left .5em
 
 input#f_comment
-    width 100%
+    width 96%
     border border_style
     margin .3em 0
 
