--- a/MoinMoin/themes/foobar/static/css/stylus/main.styl
+++ b/MoinMoin/themes/foobar/static/css/stylus/main.styl
@@ -692,6 +692,7 @@ a
 #moin-searchform #moin-search-submit
     text-indent -9000%
     margin-left -24px
+    padding 0px
     width 20px
     height 16px
     background url(../img/moin-search.png) center center no-repeat
